--- a/practicas/Semana-03/Makefile
+++ b/practicas/Semana-03/Makefile
@@ -1,6 +1,6 @@
 
 ipv4-test: ipv4-test.o Socket.o
-	g++ -g ipv4-test Socket.o -o ipv4-test
+	g++ -g ipv4-test.o Socket.o -o ipv4-test
 
 Socket.o: Socket.h Socket.cc
 	g++ -g -c Socket.cc
@@ -9,7 +9,7 @@ ipv4-test.o: ipv4-test.cc Socket.h
 	g++ -g -c ipv4-test.c
 
 ipv6-test: ipv6-test.o Socket.o
-	g++ -g ipv6-test Socket.o -o ipv6-test
+	g++ -g ipv6-test.o Socket.o -o ipv6-test
 
 ipv6-test.o: ipv6-test.cc Socket.h
 	g++ -g -c ipv6-test.c
