Modificaciones en Semana-07 y agregado de Semana-08

--- a/practicas/Semana-07/Makefile
+++ b/practicas/Semana-07/Makefile
@@ -1,4 +1,4 @@
 
-processHTML: processHTML.c
-	gcc -g processHTML.c -o processHTML.out
+processHTML.out: processHTML.c
+	g++ -g processHTML.c -o processHTML.out
 
